--- a/lab_06_01/.vscode/settings.json
+++ b/lab_06_01/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
     "files.associations": {
-        "stdio.h": "c"
+        "stdio.h": "c",
+        "fort.h": "c"
     },
     "C_Cpp.errorSquiggles": "disabled"
 }
