--- a/lab_06_01/.vscode/settings.json
+++ b/lab_06_01/.vscode/settings.json
@@ -1,7 +1,8 @@
 {
     "files.associations": {
         "stdio.h": "c",
-        "fort.h": "c"
+        "fort.h": "c",
+        "help_func.h": "c"
     },
     "C_Cpp.errorSquiggles": "disabled"
 }
